@@ -3,6 +3,6 @@ DIST holland-1.0.6.tar.gz 435531 RMD160 c5c8a2b9aed1f2483ff9aadc44f0ee192f93b862
 EBUILD holland-backup-mysqldump-1.0.4-r1.ebuild 1180 RMD160 4179b751deecbd12a582d27bf7f34fce1deff29a SHA1 fbe871738afc716786a7b369ccaee9842d9e7733 SHA256 80f3f83bd23ddbd56170d5d47531773c47d46c7f1261df88b9d0807569ab5243
 EBUILD holland-backup-mysqldump-1.0.4.ebuild 938 RMD160 d194bef61c1efaff56832a97993d76c2aebdfb9c SHA1 8c73e218dc4bc0adf017cfc7511c4553c7d31411 SHA256 125084a55a6dee45aa181aad67880a0aa985f2ff15bf0259659ccb37e1e1c9a1
 EBUILD holland-backup-mysqldump-1.0.6.ebuild 1180 RMD160 4179b751deecbd12a582d27bf7f34fce1deff29a SHA1 fbe871738afc716786a7b369ccaee9842d9e7733 SHA256 80f3f83bd23ddbd56170d5d47531773c47d46c7f1261df88b9d0807569ab5243
-EBUILD holland-backup-mysqldump-9999.ebuild 916 RMD160 5431920a60dc9cf30911f44d5a774f3fea646df7 SHA1 5fc069ea8c3903c03fa9862c52534c9a654be8f6 SHA256 29852994240f7881ced5c829c9910d36e0d218927fc9ae293351be295f149211
-MISC ChangeLog 1455 RMD160 fbf9643eb57f1768e519f49e4fea95a1e9b507f2 SHA1 8f29f3ee7f15c43df4c8adfad8f1be86202abd60 SHA256 e38fd3157104fbff3d76f59c8a933c1df18e928be85122b5f53ba77ae7bf24bd
+EBUILD holland-backup-mysqldump-9999.ebuild 914 RMD160 d7d0a78301c90ae3a40366ae115a3c598cccb18a SHA1 b69a64d5699ad466ad20316eca3128b4fb29a234 SHA256 92509e4f0880924d7c00cb27f8a55b7fb9f4e1605f36fd258e153f9dd609e971
+MISC ChangeLog 1571 RMD160 859f0d7c64cbfb698777b985b600f3dccb99a3d7 SHA1 96d590d154c0d7f90aac60c10f68a40f18abd207 SHA256 ba235404d4464a9f02ac8da32ac247349728eaa9a2edee4f7a15efd88e5aaae0
 MISC metadata.xml 278 RMD160 ead495a428159b2687bd22bd9c0f098d9b3b10b1 SHA1 1d7d4778ff10651c1fd27d3f62eb68564c3abf18 SHA256 92c03228afcffe7d4e01c3d54a6b85408295cc940c0f12bab880487e22616a53
