@@ -1,6 +1,9 @@
 # ChangeLog for app-backup/holland-backup-mysqldump
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  07 Apr 2012; <alunduil@gentoo.org> holland-backup-mysqldump-9999.ebuild:
+  Updated the live ebuild for distutils
 
   14 Jan 2011; <alunduil@gentoo.org> holland-backup-mysqldump-1.0.6.ebuild:
   Stabilizing holland-backup-mysqldump
